# Robot

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh  test.cpp
data/: input.txt  inputB.txt  invalidCommand.txt  invalidStartPosition.txt  moveOnTheWholeBoardInput.txt  oneValidCommandInStartAndAtTheEnd.txt  oneValidCommandRestNotValid.txt  robotDontFallEAST.txt  robotDontFallNORTH.txt  robotDontFallSOUTH.txt  robotDontFallWEST.txt  startPosNotINTValue.txt  startPosToLargeIntValue.txt  test-input.txt
include/: board.h  command.h  control.h  inputGeneratorFile.h  robot.h
src/: CMakeLists.txt  board.cpp  control.cpp  cor-input.cpp  main.cpp  robot.cpp
